clean up code and refactor test to use MangaFilter