@@ -4,10 +4,12 @@ import dev.playerblair.catalogingapp.api.service.ApiService;
 import dev.playerblair.catalogingapp.api.wrapper.GenreWrapper;
 import dev.playerblair.catalogingapp.api.wrapper.MangaWrapper;
 import dev.playerblair.catalogingapp.manga.dto.MangaCollectionUpdate;
+import dev.playerblair.catalogingapp.manga.dto.MangaFilter;
 import dev.playerblair.catalogingapp.manga.dto.MangaProgressUpdate;
 import dev.playerblair.catalogingapp.manga.model.*;
 import dev.playerblair.catalogingapp.manga.repository.AuthorRepository;
 import dev.playerblair.catalogingapp.manga.repository.MangaRepository;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -20,10 +22,10 @@ import java.util.Map;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class MangaServiceTest {
@@ -43,62 +45,85 @@ public class MangaServiceTest {
     @Mock
     private Map<Long, MangaWrapper> mockSearchResults;
 
-    @Test
-    public void whenListMangaIsCalled_returnManga() {
-        Manga manga1 = Manga.builder()
+    private Author author1;
+    private Author author2;
+
+    private Manga manga1;
+    private Manga manga2;
+
+    private MangaWrapper mangaWrapper1;
+    private MangaWrapper mangaWrapper2;
+
+    @BeforeEach
+    public void setUp() {
+        author1 = Author.builder()
                 .malId(1L)
-                .title("Manga1")
-                .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
-                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
-                .status(MangaStatus.FINISHED)
+                .name("Test Author 1")
                 .build();
 
-        Manga manga2 = Manga.builder()
+        author2 = Author.builder()
                 .malId(2L)
-                .title("Manga2")
+                .name("Test Author 2")
+                .build();
+
+        manga1 = Manga.builder()
+                .malId(1L)
+                .title("Test Manga 1")
                 .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
+                .authors(List.of(author1))
                 .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
                 .status(MangaStatus.FINISHED)
                 .build();
 
-        List<Manga> mangaList = List.of(manga1, manga2);
+        manga2 = Manga.builder()
+                .malId(2L)
+                .title("Test Manga 2")
+                .type(MangaType.MANGA)
+                .authors(List.of(author2))
+                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
+                .status(MangaStatus.FINISHED)
+                .build();
 
-        given(mangaRepository.findAll()).willReturn(mangaList);
-
-        List<Manga> manga = mangaService.listManga();
-
-        assertThat(manga).hasSize(2);
-        assertThat(manga.getFirst().getTitle()).isEqualTo("Manga1");
-    }
-
-    @Test
-    public void givenQuery_whenSearchMangaIsCalled_returnSearchResults() {
-        MangaWrapper mangaWrapper1 = new MangaWrapper(
+        mangaWrapper1 = new MangaWrapper(
                 1L,
-                "Manga1",
+                "Test Manga 1",
                 "Manga",
                 100,
                 10,
                 "Finished",
-                List.of(new Author(1L, "Author", "www.example.com")),
+                List.of(new Author(1L, "Test Author 1", "www.example.com")),
                 List.of(new GenreWrapper("Action")),
                 "www.example.com"
         );
 
-        MangaWrapper mangaWrapper2 = new MangaWrapper(
+        mangaWrapper2 = new MangaWrapper(
                 2L,
-                "Manga2",
+                "Test Manga 2",
                 "Manga",
-                20,
-                2,
+                100,
+                10,
                 "Finished",
-                List.of(new Author(2L, "Author", "www.example.com")),
+                List.of(new Author(2L, "Test Author 2", "www.example.com")),
                 List.of(new GenreWrapper("Action")),
                 "www.example.com"
         );
+    }
 
+    @Test
+    public void whenListMangaIsCalled_returnManga() {
+        List<Manga> mangaList = List.of(manga1, manga2);
+
+        when(mangaRepository.findAll()).thenReturn(mangaList);
+
+        List<Manga> manga = mangaService.listManga();
+
+        assertThat(manga).hasSize(2);
+        assertThat(manga.get(0).getTitle()).isEqualTo("Test Manga 1");
+        assertThat(manga.get(1).getTitle()).isEqualTo("Test Manga 2");
+    }
+
+    @Test
+    public void givenQuery_whenSearchMangaIsCalled_returnSearchResults() {
         List<MangaWrapper> manga = List.of(mangaWrapper1, mangaWrapper2);
 
         String query = "Manga";
@@ -108,23 +133,13 @@ public class MangaServiceTest {
         List<MangaWrapper> results = mangaService.searchManga(query);
 
         assertThat(results).hasSize(2);
-        assertThat(results.getFirst().getTitle()).isEqualTo("Manga1");
+        assertThat(manga.get(0).getTitle()).isEqualTo("Test Manga 1");
+        assertThat(manga.get(1).getTitle()).isEqualTo("Test Manga 2");
     }
 
     @Test
     public void givenMangaWrapperObject_whenGenerateMangaIsCalled_returnManga() {
-        MangaWrapper mangaWrapper = new MangaWrapper(
-                1L,
-                "Example",
-                "Manga",
-                100,
-                10,
-                "Finished",
-                List.of(new Author()),
-                List.of(new GenreWrapper("Action")),
-                "www.example.com"
-        );
-        Manga manga = mangaService.generateManga(mangaWrapper);
+        Manga manga = mangaService.generateManga(mangaWrapper1);
         assertThat(manga.getMalId()).isEqualTo(1L);
         assertThat(manga.getAuthors()).isNotEmpty();
         assertThat(manga.getGenres()).isNotEmpty();
@@ -132,27 +147,15 @@ public class MangaServiceTest {
 
     @Test
     public void givenId_whenAddMangaIsCalled_saveManga() {
-        MangaWrapper mangaWrapper = new MangaWrapper(
-                1L,
-                "Example",
-                "Manga",
-                100,
-                10,
-                "Finished",
-                List.of(new Author(1L, "Author", "www.example.com")),
-                List.of(new GenreWrapper("Action")),
-                "www.example.com"
-        );
-
         Long id = 1L;
 
-        when(mockSearchResults.get(id)).thenReturn(mangaWrapper);
+        when(mockSearchResults.get(id)).thenReturn(mangaWrapper1);
         ReflectionTestUtils.setField(mangaService, "currentSearchResults", mockSearchResults);
 
         mangaService.addManga(id);
 
-        verify(authorRepository).save(argThat(author -> author.getName().equals("Author")));
-        verify(mangaRepository).save(argThat(manga -> manga.getTitle().equals("Example")));
+        verify(authorRepository).save(argThat(author -> author.getName().equals("Test Author 1")));
+        verify(mangaRepository).save(argThat(manga -> manga.getTitle().equals("Test Manga 1")));
     }
 
     @Test
@@ -163,49 +166,7 @@ public class MangaServiceTest {
 
     @Test
     public void whenUpdateAllMangaIsCalled_updateManga() {
-        Manga manga1 = Manga.builder()
-                .malId(1L)
-                .title("Manga1")
-                .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
-                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
-                .status(MangaStatus.FINISHED)
-                .build();
-
-        Manga manga2 = Manga.builder()
-                .malId(2L)
-                .title("Manga2")
-                .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
-                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
-                .status(MangaStatus.FINISHED)
-                .build();
-
         List<Manga> mangaList = List.of(manga1, manga2);
-
-        MangaWrapper mangaWrapper1 = new MangaWrapper(
-                1L,
-                "Manga1",
-                "Manga",
-                100,
-                10,
-                "Finished",
-                List.of(new Author(1L, "Author", "www.example.com")),
-                List.of(new GenreWrapper("Action")),
-                "www.example.com"
-        );
-
-        MangaWrapper mangaWrapper2 = new MangaWrapper(
-                2L,
-                "Manga2",
-                "Manga",
-                20,
-                2,
-                "Finished",
-                List.of(new Author(2L, "Author", "www.example.com")),
-                List.of(new GenreWrapper("Action")),
-                "www.example.com"
-        );
 
         given(mangaRepository.findAll()).willReturn(mangaList);
         given(apiService.getManga(manga1.getMalId())).willReturn(mangaWrapper1);
@@ -213,17 +174,7 @@ public class MangaServiceTest {
 
         mangaService.updateAllManga();
 
-        verify(mangaRepository).save(argThat(manga ->
-                manga.getChapters() == mangaWrapper1.getChapters() &&
-                manga.getVolumes() == mangaWrapper1.getVolumes() &&
-                manga.getStatus() == MangaStatus.fromCode(mangaWrapper1.getStatus())
-        ));
-
-        verify(mangaRepository).save(argThat(manga ->
-                manga.getChapters() == mangaWrapper2.getChapters() &&
-                manga.getVolumes() == mangaWrapper2.getVolumes() &&
-                manga.getStatus() == MangaStatus.fromCode(mangaWrapper2.getStatus())
-        ));
+        verify(mangaRepository, times(2)).save(any(Manga.class));
     }
 
     @Test
@@ -236,16 +187,7 @@ public class MangaServiceTest {
                 10
         );
 
-        Manga manga = Manga.builder()
-                .malId(1L)
-                .title("Manga1")
-                .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
-                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
-                .status(MangaStatus.FINISHED)
-                .build();
-
-        given(mangaRepository.findById(1L)).willReturn(Optional.of(manga));
+        given(mangaRepository.findById(1L)).willReturn(Optional.of(manga1));
 
         mangaService.updateProgress(progressUpdate);
 
@@ -262,26 +204,21 @@ public class MangaServiceTest {
         MangaCollectionUpdate collectionUpdate = new MangaCollectionUpdate(
                 1L,
                 true,
+                true,
+                3,
                 1,
-                3
+                List.of(1),
+                "Paperback"
         );
 
-        Manga manga = Manga.builder()
-                .malId(1L)
-                .title("Manga1")
-                .type(MangaType.MANGA)
-                .authors(List.of(new Author()))
-                .genres(List.of(MangaGenre.ROMANCE, MangaGenre.ACTION))
-                .status(MangaStatus.FINISHED)
-                .build();
-
-        given(mangaRepository.findById(1L)).willReturn(Optional.of(manga));
+        given(mangaRepository.findById(1L)).willReturn(Optional.of(manga1));
 
         mangaService.updateCollection(collectionUpdate);
 
         verify(mangaRepository).save(argThat(m ->
                 m.getMalId().equals(collectionUpdate.getMalId()) &&
-                m.isDigitalCopy() &&
+                m.isDigitalCollection() &&
+                m.isPhysicalCollection() &&
                 m.getVolumesOwned() == collectionUpdate.getVolumesOwned() &&
                 m.getVolumesAvailable() == collectionUpdate.getVolumesAvailable()
         ));
@@ -289,37 +226,16 @@ public class MangaServiceTest {
 
     @Test
     public void givenTitle_whenFilterByTitleIsCalled_returnFilteredManga() {
-        mangaService.filterByTitle("Title");
-        verify(mangaRepository).findByTitleLike("Title");
-    }
+        MangaFilter filter = new MangaFilter();
+        filter.setQuery("Test Manga 1");
 
-    @Test
-    public void givenGenres_whenFilterByGenresORIsCalled_returnFilteredManga() {
-        mangaService.filterByGenresOR(List.of("Action", "Romance", "Slice of Life"));
-        verify(mangaRepository).findByGenresOR(List.of(MangaGenre.ACTION, MangaGenre.ROMANCE, MangaGenre.SLICE_OF_LIFE));
-    }
+        List<Manga> expectedManga = List.of(new Manga());
 
-    @Test
-    public void givenGenres_whenFilterByGenresANDIsCalled_returnFilteredManga() {
-        mangaService.filterByGenresAND(List.of("Action", "Romance", "Slice of Life"));
-        verify(mangaRepository).findByGenresAND(List.of(MangaGenre.ACTION, MangaGenre.ROMANCE, MangaGenre.SLICE_OF_LIFE));
-    }
+        when(mangaRepository.findByDynamicCriteria(filter)).thenReturn(expectedManga);
 
-    @Test
-    public void givenAuthor_whenFilterByAuthorIsCalled_returnFilteredManga() {
-        mangaService.filterByAuthor("Author");
-        verify(mangaRepository).findByAuthor("Author");
-    }
+        List<Manga> result = mangaService.filterManga(filter);
 
-    @Test
-    public void givenStatus_whenFilterByStatusIsCalled_returnFilteredManga() {
-        mangaService.filterByStatus("Finished");
-        verify(mangaRepository).findByStatus(MangaStatus.FINISHED);
-    }
-
-    @Test
-    public void giveProgress_whenFilterByProgressIsCalled_returnFilteredManga() {
-        mangaService.filterByProgress("FINISHED");
-        verify(mangaRepository).findByProgress(MangaProgress.FINISHED);
+        verify(mangaRepository).findByDynamicCriteria(any(MangaFilter.class));
+        assertThat(result).isEqualTo(expectedManga);
     }
 }
